<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.dialogs.ExitDialog"
    app:cardCornerRadius="@dimen/_20sdp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog"
        android:padding="@dimen/_10sdp">




        <TextView
            android:id="@+id/tv_win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/you_win"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/win_dialog_tv_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/give_up"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_win" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/win_dialog_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/win_dialog_tv_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/ok"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/shape_start_btn"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>