<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.dialogs.VideoDialog"
    app:cardCornerRadius="@dimen/_20sdp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog"
        android:padding="@dimen/_10sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/video_dialog_btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:src="@drawable/ic_exit"
            app:civ_circle_background_color="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/video_gift"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_dialog_btn_exit" />


        <TextView
            android:id="@+id/video_dialog_tv_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/watch_advert"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_gift" />




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/video_dialog_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/video_dialog_tv_gift"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/watch"
            android:visibility="gone"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/shape_start_btn"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>